// Custom Keyboard Builder - ERD con: Component Catalog va Compatibility
// Lat cat nay dung de trinh bay danh muc linh kien, layout mapping va rule tuong thich.
// ERD full van la Documents/Custom_Keyboard_ERD.dbml.

Table brands {
  brand_id int [pk, increment]
  brand_name varchar [unique]
  country varchar
}

Table layouts {
  layout_id varchar [pk]
  layout_name varchar
  form_factor varchar
  standard_key_count int
}

Table switches {
  switch_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  switch_technology varchar
  switch_type varchar
  actuation_force_g int
  mount_type varchar
  sound_profile varchar
  price_usd float
  is_available boolean
}

Table keycap_sets {
  keycap_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  profile varchar
  material varchar
  color_primary varchar
  legend_type varchar
  price_usd float
  is_available boolean
}

Table cases {
  case_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  material varchar
  mount_type varchar
  color varchar
  weight_g int
  price_usd float
  is_available boolean
}

Table pcbs {
  pcb_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  pcb_technology varchar
  mount_type varchar
  hotswap boolean
  wireless boolean
  rgb boolean
  switch_mount varchar
  price_usd float
  is_available boolean
}

Table plates {
  plate_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  material varchar
  mount_type varchar
  flex_cut varchar
  price_usd float
  is_available boolean
}

Table stabilizers {
  stab_id varchar [pk]
  brand_id int [not null, ref: > brands.brand_id]
  stab_type varchar
  sizes_included varchar
  price_usd float
  is_available boolean
}

Table case_layouts {
  case_id varchar [not null, ref: > cases.case_id]
  layout_id varchar [not null, ref: > layouts.layout_id]
  is_primary boolean

  indexes {
    (case_id, layout_id) [pk]
  }
}

Table pcb_layouts {
  layout_id varchar [not null, ref: > layouts.layout_id]
  pcb_id varchar [not null, ref: > pcbs.pcb_id]
  variant_name varchar

  indexes {
    (pcb_id, layout_id) [pk]
  }
}

Table plate_layouts {
  plate_id varchar [not null, ref: > plates.plate_id]
  layout_id varchar [not null, ref: > layouts.layout_id]

  indexes {
    (plate_id, layout_id) [pk]
  }
}

Table compatibility_rules {
  rule_id int [pk, increment]
  case_id varchar [not null, ref: > cases.case_id]
  pcb_id varchar [not null, ref: > pcbs.pcb_id]
  plate_id varchar [not null, ref: > plates.plate_id]
  is_compatible boolean
  notes varchar

  Note: 'Switch mount compatibility is checked by pcbs.switch_mount matching switches.mount_type, not by extra columns here.'
}
